--- a/modal.css
+++ b/modal.css
@@ -294,8 +294,17 @@ input[data-error]::after {
 }
 
 .checkbox-input {
-	display: none;
+	position: absolute;
+	opacity: 0;
+	left: 0;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	border: 0;
 }
+
 
 .checkbox-input:checked+.checkbox-label .checkbox-icon::after,
 .checkbox-input:checked+.checkbox2-label .checkbox-icon::after {
